--- a/package/tsconfig-cjs.json
+++ b/package/tsconfig-cjs.json
@@ -2,13 +2,13 @@
 	"exclude": ["dist", "node_modules"],
 	"compilerOptions": {
 		"target": "es6",
-		"outDir": "./lib/esm",
+		"outDir": "./lib/cjs",
 		"lib": ["esnext", "DOM", "DOM.Iterable"],
 		"declaration": true,
 		"jsx": "preserve",
 		"allowJs": true,
 		"esModuleInterop": true,
-		"module": "esnext",
+		"module": "commonjs",
 		"rootDir": "./",
 		"moduleResolution": "node",
 		"sourceMap": true,
