--- a/app/package.json
+++ b/app/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "typescript": "^4.7.4",
-    "vite": "^3.0.0",
-    "vite-plugin-solid": "^2.3.0"
-  },
-  "dependencies": {
-    "solid-icons": "^0.5.0",
-    "solid-js": "^1.4.7",
-    "solid-styled-components": "^0.28.4",
-    "solid-transition-group": "^0.0.10"
-  }
+	"name": "vite-template-solid",
+	"version": "0.0.0",
+	"description": "",
+	"scripts": {
+		"start": "vite",
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"typescript": "^4.7.4",
+		"vite": "^3.0.0",
+		"vite-plugin-solid": "^2.3.0"
+	},
+	"dependencies": {
+		"@melodev/solid-datepicker": "^0.1.10",
+		"solid-icons": "^0.5.0",
+		"solid-js": "^1.4.7",
+		"solid-styled-components": "^0.28.4",
+		"solid-transition-group": "^0.0.10"
+	}
 }
