--- a/package/package.json
+++ b/package/package.json
@@ -1,41 +1,43 @@
 {
-	"name": "@melodev/solid-datepicker",
-	"version": "0.1.4",
-	"description": "extensible datepicker component for solid applications",
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"files": [
-		"dist/"
-	],
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"clean": "rm -rf dist",
-		"build": "npm run clean && tsc && cp package.json README.md ./dist && npm run replace"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/mrchernicharo/solid-datepicker.git"
-	},
-	"devDependencies": {
-		"typescript": "^4.7.3"
-	},
-	"dependencies": {
-		"solid-js": "^1.4.7",
-		"solid-styled-components": "^0.28.4",
-		"solid-transition-group": "^0.0.10"
-	},
-	"keywords": [
-		"datepicker",
-		"date",
-		"calendar",
-		"solidjs",
-		"solid-datepicker"
-	],
-	"author": "melodev",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/mrchernicharo/solid-datepicker/issues"
-	},
-	"homepage": "https://github.com/mrchernicharo/solid-datepicker#readme"
+  "version": "0.1.10",
+  "name": "@melodev/solid-datepicker",
+  "description": "A customizable datepicker component for SolidJS projects",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/esm/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "solid": "./dist/source/index.jsx",
+      "import": "./dist/esm/index.js",
+      "browser": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "node": "./dist/cjs/index.js"
+    }
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "prepublishOnly": "pnpm build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mrchernicharo/solid-datepicker.git"
+  },
+  "keywords": [],
+  "author": "melodev",
+  "license": "MIT",
+  "homepage": "https://github.com/mrchernicharo/solid-datepicker#readme",
+  "dependencies": {
+    "solid-js": "^1.1.7",
+    "solid-styled-components": "^0.28.4",
+    "solid-transition-group": "^0.0.10"
+  },
+  "devDependencies": {
+    "rollup": "^2.58.0",
+    "rollup-preset-solid": "^1.0.1",
+    "typescript": "^4.4.4"
+  }
 }
