--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -1,24 +1,19 @@
 {
-	"exclude": ["dist", "node_modules"],
-	"compilerOptions": {
-		"target": "es6",
-		"outDir": "./dist",
-		"lib": ["esnext", "DOM", "DOM.Iterable"],
-		"declaration": true,
-		"jsx": "preserve",
-		"allowJs": true,
-		"esModuleInterop": true,
-		"module": "esnext",
-		"rootDir": "./src",
-		"moduleResolution": "node",
-		"sourceMap": true,
-		"importHelpers": true,
-		"downlevelIteration": true,
-		"strict": true,
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"noImplicitAny": false,
-		"skipLibCheck": true,
-		"skipDefaultLibCheck": true
-	}
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "commonjs",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "declaration": true,
+    "moduleResolution": "node",
+    "declarationDir": "./types",
+    "emitDeclarationOnly": true,
+    "strict": true,
+    "jsx": "preserve",
+    "resolveJsonModule": true,
+    "noImplicitAny": false
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
