--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -11,6 +11,7 @@
     "emitDeclarationOnly": true,
     "strict": true,
     "jsx": "preserve",
+    "jsxImportSource": "solid-js",
     "resolveJsonModule": true,
     "noImplicitAny": false
   },
